--- a/vanilla_model_cleaned.ipynb
+++ b/vanilla_model_cleaned.ipynb
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T21:34:46.061234Z",
-     "start_time": "2021-03-11T21:34:46.057455Z"
+     "end_time": "2021-03-16T22:05:59.654345Z",
+     "start_time": "2021-03-16T22:05:59.650709Z"
     }
    },
    "outputs": [],
@@ -42,11 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T21:34:47.175115Z",
-     "start_time": "2021-03-11T21:34:47.172513Z"
+     "end_time": "2021-03-16T22:06:00.056241Z",
+     "start_time": "2021-03-16T22:06:00.049839Z"
     }
    },
    "outputs": [],
@@ -57,21 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T07:21:33.040395Z",
-     "start_time": "2021-03-11T07:21:33.033039Z"
+     "end_time": "2021-03-16T22:06:00.418239Z",
+     "start_time": "2021-03-16T22:06:00.412458Z"
     }
    },
    "outputs": [],
    "source": [
-    "# # Import Packages\n",
-    "# import pandas as pd\n",
-    "# import seaborn as sns\n",
-    "# import numpy as np\n",
-    "# import matplotlib.pyplot as plt\n",
-    "\n",
     "# # Sklearn Packages\n",
     "# from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score\n",
     "# \n",
@@ -102,11 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T21:34:57.899265Z",
-     "start_time": "2021-03-11T21:34:57.883507Z"
+     "end_time": "2021-03-16T22:06:00.933631Z",
+     "start_time": "2021-03-16T22:06:00.913170Z"
     }
    },
    "outputs": [
@@ -114,7 +108,7 @@
      "data": {
       "application/javascript": [
        "\n",
-       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np\\nimport matplotlib.pyplot as plt\\nimport pandas as pd\\nimport seaborn as sns\\nfrom sklearn.model_selection import train_test_split'); }\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np\\nimport pandas as pd\\nfrom sklearn.model_selection import train_test_split\\nimport matplotlib.pyplot as plt\\nimport seaborn as sns'); }\n",
        "    "
       ],
       "text/plain": [
@@ -139,11 +133,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T21:34:58.948612Z",
-     "start_time": "2021-03-11T21:34:58.941788Z"
+     "end_time": "2021-03-16T22:06:01.885723Z",
+     "start_time": "2021-03-16T22:06:01.880643Z"
     }
    },
    "outputs": [
@@ -151,7 +145,7 @@
      "data": {
       "application/javascript": [
        "\n",
-       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np\\nimport matplotlib.pyplot as plt\\nimport pandas as pd\\nimport seaborn as sns\\nfrom sklearn.model_selection import train_test_split'); }\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np\\nimport pandas as pd\\nfrom sklearn.model_selection import train_test_split\\nimport matplotlib.pyplot as plt\\nimport seaborn as sns'); }\n",
        "    "
       ],
       "text/plain": [
@@ -185,11 +179,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T21:35:00.033231Z",
-     "start_time": "2021-03-11T21:35:00.022629Z"
+     "end_time": "2021-03-16T22:06:03.417756Z",
+     "start_time": "2021-03-16T22:06:03.408764Z"
     }
    },
    "outputs": [
@@ -197,7 +191,7 @@
      "data": {
       "application/javascript": [
        "\n",
-       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np\\nimport matplotlib.pyplot as plt\\nimport pandas as pd\\nimport seaborn as sns\\nfrom sklearn.model_selection import train_test_split'); }\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np\\nimport pandas as pd\\nfrom sklearn.model_selection import train_test_split\\nimport matplotlib.pyplot as plt\\nimport seaborn as sns'); }\n",
        "    "
       ],
       "text/plain": [
@@ -219,11 +213,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T21:35:00.542799Z",
-     "start_time": "2021-03-11T21:35:00.538475Z"
+     "end_time": "2021-03-16T22:06:04.882398Z",
+     "start_time": "2021-03-16T22:06:04.877484Z"
     }
    },
    "outputs": [
@@ -272,11 +266,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T21:35:04.857807Z",
-     "start_time": "2021-03-11T21:35:04.854541Z"
+     "end_time": "2021-03-16T22:06:09.668247Z",
+     "start_time": "2021-03-16T22:06:09.664389Z"
     }
    },
    "outputs": [],
@@ -287,11 +281,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-11T21:37:21.473343Z",
-     "start_time": "2021-03-11T21:37:18.370117Z"
+     "end_time": "2021-03-16T22:05:32.672892Z",
+     "start_time": "2021-03-16T22:05:29.306764Z"
     }
    },
    "outputs": [
@@ -299,7 +293,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:03<00:00,  9.83it/s]\n"
+      "100%|██████████| 30/30 [00:03<00:00,  9.02it/s]\n"
      ]
     },
     {
@@ -345,7 +339,7 @@
        "      <td>0.93</td>\n",
        "      <td>0.93</td>\n",
        "      <td>0.96</td>\n",
-       "      <td>0.76</td>\n",
+       "      <td>0.41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DecisionTreeClassifier</th>\n",
@@ -361,7 +355,7 @@
        "      <td>0.90</td>\n",
        "      <td>0.90</td>\n",
        "      <td>0.94</td>\n",
-       "      <td>0.15</td>\n",
+       "      <td>0.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomForestClassifier</th>\n",
@@ -369,7 +363,7 @@
        "      <td>0.90</td>\n",
        "      <td>0.90</td>\n",
        "      <td>0.95</td>\n",
-       "      <td>0.34</td>\n",
+       "      <td>0.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AdaBoostClassifier</th>\n",
@@ -385,7 +379,7 @@
        "      <td>0.89</td>\n",
        "      <td>0.89</td>\n",
        "      <td>0.95</td>\n",
-       "      <td>0.26</td>\n",
+       "      <td>0.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SVC</th>\n",
@@ -409,7 +403,7 @@
        "      <td>0.88</td>\n",
        "      <td>0.88</td>\n",
        "      <td>0.93</td>\n",
-       "      <td>0.13</td>\n",
+       "      <td>0.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LabelSpreading</th>\n",
@@ -417,7 +411,7 @@
        "      <td>0.88</td>\n",
        "      <td>0.88</td>\n",
        "      <td>0.93</td>\n",
-       "      <td>0.20</td>\n",
+       "      <td>0.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LogisticRegression</th>\n",
@@ -425,7 +419,7 @@
        "      <td>0.87</td>\n",
        "      <td>0.87</td>\n",
        "      <td>0.92</td>\n",
-       "      <td>0.05</td>\n",
+       "      <td>0.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LinearSVC</th>\n",
@@ -433,7 +427,7 @@
        "      <td>0.87</td>\n",
        "      <td>0.87</td>\n",
        "      <td>0.91</td>\n",
-       "      <td>0.10</td>\n",
+       "      <td>0.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CalibratedClassifierCV</th>\n",
@@ -441,7 +435,7 @@
        "      <td>0.87</td>\n",
        "      <td>0.87</td>\n",
        "      <td>0.91</td>\n",
-       "      <td>0.28</td>\n",
+       "      <td>0.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NearestCentroid</th>\n",
@@ -473,7 +467,7 @@
        "      <td>0.85</td>\n",
        "      <td>0.85</td>\n",
        "      <td>0.88</td>\n",
-       "      <td>0.02</td>\n",
+       "      <td>0.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LinearDiscriminantAnalysis</th>\n",
@@ -481,7 +475,7 @@
        "      <td>0.83</td>\n",
        "      <td>0.83</td>\n",
        "      <td>0.89</td>\n",
-       "      <td>0.03</td>\n",
+       "      <td>0.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RidgeClassifier</th>\n",
@@ -489,7 +483,7 @@
        "      <td>0.83</td>\n",
        "      <td>0.83</td>\n",
        "      <td>0.90</td>\n",
-       "      <td>0.02</td>\n",
+       "      <td>0.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RidgeClassifierCV</th>\n",
@@ -497,7 +491,7 @@
        "      <td>0.83</td>\n",
        "      <td>0.83</td>\n",
        "      <td>0.90</td>\n",
-       "      <td>0.02</td>\n",
+       "      <td>0.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GaussianNB</th>\n",
@@ -513,7 +507,7 @@
        "      <td>0.80</td>\n",
        "      <td>0.80</td>\n",
        "      <td>0.86</td>\n",
-       "      <td>0.02</td>\n",
+       "      <td>0.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BernoulliNB</th>\n",
@@ -521,7 +515,7 @@
        "      <td>0.80</td>\n",
        "      <td>0.80</td>\n",
        "      <td>0.85</td>\n",
-       "      <td>0.04</td>\n",
+       "      <td>0.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>QuadraticDiscriminantAnalysis</th>\n",
@@ -529,7 +523,7 @@
        "      <td>0.78</td>\n",
        "      <td>0.78</td>\n",
        "      <td>0.86</td>\n",
-       "      <td>0.02</td>\n",
+       "      <td>0.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DummyClassifier</th>\n",
@@ -583,35 +577,35 @@
        "\n",
        "                               Time Taken  \n",
        "Model                                      \n",
-       "LGBMClassifier                       0.76  \n",
+       "LGBMClassifier                       0.41  \n",
        "DecisionTreeClassifier               0.03  \n",
-       "BaggingClassifier                    0.15  \n",
-       "RandomForestClassifier               0.34  \n",
+       "BaggingClassifier                    0.12  \n",
+       "RandomForestClassifier               0.40  \n",
        "AdaBoostClassifier                   0.22  \n",
-       "ExtraTreesClassifier                 0.26  \n",
+       "ExtraTreesClassifier                 0.23  \n",
        "SVC                                  0.08  \n",
        "KNeighborsClassifier                 0.08  \n",
-       "LabelPropagation                     0.13  \n",
-       "LabelSpreading                       0.20  \n",
-       "LogisticRegression                   0.05  \n",
-       "LinearSVC                            0.10  \n",
-       "CalibratedClassifierCV               0.28  \n",
+       "LabelPropagation                     0.15  \n",
+       "LabelSpreading                       0.22  \n",
+       "LogisticRegression                   0.07  \n",
+       "LinearSVC                            0.12  \n",
+       "CalibratedClassifierCV               0.30  \n",
        "NearestCentroid                      0.03  \n",
        "ExtraTreeClassifier                  0.02  \n",
        "SGDClassifier                        0.04  \n",
-       "Perceptron                           0.02  \n",
-       "LinearDiscriminantAnalysis           0.03  \n",
-       "RidgeClassifier                      0.02  \n",
-       "RidgeClassifierCV                    0.02  \n",
+       "Perceptron                           0.04  \n",
+       "LinearDiscriminantAnalysis           0.47  \n",
+       "RidgeClassifier                      0.04  \n",
+       "RidgeClassifierCV                    0.03  \n",
        "GaussianNB                           0.02  \n",
-       "PassiveAggressiveClassifier          0.02  \n",
-       "BernoulliNB                          0.04  \n",
-       "QuadraticDiscriminantAnalysis        0.02  \n",
+       "PassiveAggressiveClassifier          0.03  \n",
+       "BernoulliNB                          0.03  \n",
+       "QuadraticDiscriminantAnalysis        0.05  \n",
        "DummyClassifier                      0.02  \n",
        "CheckingClassifier                   0.02  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,75 +614,6 @@
     "clf = LazyClassifier(verbose=0,ignore_warnings=True, custom_metric=None)\n",
     "models, predictions = clf.fit(X_train, X_test, y_train, y_test)\n",
     "models"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-11T21:26:17.336383Z",
-     "start_time": "2021-03-11T21:26:17.014039Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np\\nimport pandas as pd\\nimport seaborn as sns\\nfrom sklearn.model_selection import train_test_split'); }\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np\\nimport matplotlib.pyplot as plt\\nimport pandas as pd\\nimport seaborn as sns\\nfrom sklearn.model_selection import train_test_split'); }\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np\\nimport matplotlib.pyplot as plt\\nimport pandas as pd\\nimport seaborn as sns\\nfrom sklearn.model_selection import train_test_split'); }\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 800x600 with 1 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "sns.set_style('dark')\n",
-    "models['F1 Score'].hist(figsize=(8,6), bins=20)\n",
-    "plt.title('Lazy Predict', fontsize=14)\n",
-    "plt.show()"
    ]
   },
   {
