--- a/experimental_feature_and_ensemble_models.ipynb
+++ b/experimental_feature_and_ensemble_models.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-17T00:12:01.404132Z",
-     "start_time": "2021-03-17T00:12:01.385373Z"
+     "end_time": "2021-03-17T00:16:18.075818Z",
+     "start_time": "2021-03-17T00:16:16.250179Z"
     }
    },
    "outputs": [],
@@ -64,23 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-17T00:12:01.759757Z",
-     "start_time": "2021-03-17T00:12:01.754997Z"
+     "end_time": "2021-03-17T00:16:18.515101Z",
+     "start_time": "2021-03-17T00:16:18.078474Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "TabError",
-     "evalue": "inconsistent use of tabs and spaces in indentation (functions.py, line 45)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/Users/ismael/Desktop/data_science/Projects/mod-3-improved/Predicting-Fetal-Risk-Using-Cardiotocographic-Data/functions.py\"\u001b[0;36m, line \u001b[0;32m45\u001b[0m\n\u001b[0;31m    plot_confusion_matrix(knn, X_test, y_test,  annot=True,cmap=\"OrRd\")\u001b[0m\n\u001b[0m                                                                       ^\u001b[0m\n\u001b[0;31mTabError\u001b[0m\u001b[0;31m:\u001b[0m inconsistent use of tabs and spaces in indentation\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importing all functions used in this notebook\n",
     "from functions import *"
@@ -88,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-17T00:12:02.097939Z",
-     "start_time": "2021-03-17T00:12:02.041734Z"
+     "end_time": "2021-03-17T00:16:18.578094Z",
+     "start_time": "2021-03-17T00:16:18.517942Z"
     }
    },
    "outputs": [
@@ -478,7 +469,7 @@
        "4                  0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,11 +482,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-17T00:12:02.541783Z",
-     "start_time": "2021-03-17T00:12:02.536209Z"
+     "end_time": "2021-03-17T00:16:18.584211Z",
+     "start_time": "2021-03-17T00:16:18.580708Z"
     }
    },
    "outputs": [],
@@ -522,11 +513,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-17T00:12:06.771586Z",
-     "start_time": "2021-03-17T00:12:06.762670Z"
+     "end_time": "2021-03-17T00:16:18.597657Z",
+     "start_time": "2021-03-17T00:16:18.586672Z"
     }
    },
    "outputs": [],
@@ -540,11 +531,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-17T00:12:07.426337Z",
-     "start_time": "2021-03-17T00:12:07.414605Z"
+     "end_time": "2021-03-17T00:16:18.611750Z",
+     "start_time": "2021-03-17T00:16:18.599957Z"
     }
    },
    "outputs": [
@@ -554,7 +545,7 @@
        "StandardScaler(copy=True, with_mean=True, with_std=True)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,11 +572,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-17T00:12:09.310569Z",
-     "start_time": "2021-03-17T00:12:09.282847Z"
+     "end_time": "2021-03-17T00:17:06.633032Z",
+     "start_time": "2021-03-17T00:17:06.605174Z"
     }
    },
    "outputs": [],
@@ -611,11 +602,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-17T00:12:11.229015Z",
-     "start_time": "2021-03-17T00:12:11.194904Z"
+     "end_time": "2021-03-17T00:16:21.036943Z",
+     "start_time": "2021-03-17T00:16:20.988272Z"
     }
    },
    "outputs": [],
@@ -628,30 +619,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-17T00:12:12.882757Z",
-     "start_time": "2021-03-17T00:12:12.871102Z"
+     "end_time": "2021-03-17T00:16:21.760581Z",
+     "start_time": "2021-03-17T00:16:21.554642Z"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'evaluation' is not defined",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation Metrics:\n",
+      "Accuracy: 0.9172932330827067\n",
+      "Precision: 0.927400468384075\n",
+      "Recall: 0.9682151589242054\n",
+      "F1 Score: 0.9473684210526316\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " TN,  FP, FN, TP\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "confusion_matrix() missing 1 required positional argument: 'y_test'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-0d3db7b85fd2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#prediction metrics and confusion matrix of base KNN with class imbalance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mevaluation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mknn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'evaluation' is not defined"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-60c26da5c31f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#prediction metrics and confusion matrix of base KNN with class imbalance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mevaluation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/ismael/Desktop/data_science/Projects/mod-3-improved/Predicting-Fetal-Risk-Using-Cardiotocographic-Data/functions.py\u001b[0m in \u001b[0;36mevaluation\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m     41\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\nConfusion Matrix:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' TN,  FP, FN, TP'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfusion_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: confusion_matrix() missing 1 required positional argument: 'y_test'"
      ]
     }
    ],
    "source": [
     "#prediction metrics and confusion matrix of base KNN with class imbalance\n",
-    "evaluation(knn, y_test, y_pred)\n",
-    "\n"
+    "evaluation(y_test, y_pred)"
    ]
   },
   {
